# PyMym

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: dev.yml  main.yml
PyMym/: PyMym.cp314-win_amd64.pyd  PyMym.pyi  __init__.py
src/: PyMym.cpp  src_PyMym.cpp
src/PyMym/: PyMym.pyi  __init__.py  core.py
src/PyMym/backend/: __init__.py  _lib.cp314-win_amd64.pyd
src/cpp/: src_PyMym.cpp
src_PyMym/: src_PyMym.cp314-win_amd64.pyd
tests/: c_test.cpp  pymym_test.py  pymym_tests.py
