[build-system]
requires = ["scikit-build-core>=0.5", "pybind11"]
build-backend = "scikit-build-core.build"

[project]
name = "PyMym"
dynamic = ["version"]
description = "A Python library for memory manipulation in Windows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Julian Silvestrini", email = "juliansilvestrini@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pywin32",
]

[project.urls]
"Documentation" = "https://github.com/JSilvestrini/PyMym/blob/main/README.md"
"Source" = "https://github.com/JSilvestrini/PyMym"

[tool.setuptools_scm]
write_to = "src/PyMym/_version.py"

[dependency-groups]
test = ["pytest"]
dev = [{ include-group = "test" }]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_level = "INFO"
filterwarnings = [
  "error",
  "ignore::pytest.PytestCacheWarning",
]
testpaths = ["tests"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
enable = ["pypy"]
test-command = "python -m pytest tests"
test-sources = ["pyproject.toml", "tests"]
test-groups = ["test"]